# tetris

./: .gitignore  Dockerfile  README.md  fly.toml  nginx.conf
.github/scripts/: get-app-name.sh
.github/workflows/: README.md  cleanup-cron.yml  deploy.yml
.openhands/microagents/: repo.md
backend/: .coverage  README.md  app.py  coverage.xml  pyproject.toml
backend/src/tetris_backend/: __init__.py  main.py  models.py
backend/src/tetris_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: __init__.py  test_main.py  test_models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.test.jsx  index.css
frontend/src/components/: Footer.jsx  Footer.test.jsx  GameBoard.jsx  GameControls.jsx  GameInfo.jsx  GameInfo.test.jsx  Header.jsx  Header.test.jsx  NextPiece.jsx  ScoreBoard.jsx  TetrisBoard.jsx  TetrisBoard.test.jsx  TetrisGame.jsx
frontend/src/pages/: About.jsx  Contact.jsx  Home.jsx  Home.test.jsx
frontend/src/utils/: tetris.js  tetris.test.js
